--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html lang="ja">
 <head>
 <title>UEC23Twitter 一覧</title>
+<!--テンプレート
+<h3></h3><img src="profile/" alt="" width="180" height="180" />
+<p></p>
+<a href=> Twitterプロフィール</a>
+-->
+
 </head>
 <body>
     <style>
@@ -12,7 +18,7 @@
   font-size: 18px;
 }
       </style>
-<h1 id="itibanue">UEC23生　Twitter一覧</h1>
+<h1 id="itibanue">UEC23生 Twitter一覧</h1>
 
 <div class="1_toc" >
    <ol>
@@ -42,177 +48,261 @@
         </p>
    </ol>
 </div>
+<p><h1>お願い</h1></p>
+<p>現状、このサイトは自分しか自己紹介（メモとか一言とか）を書いていないためとても悲しい感じになっています。</p>
+<p>ということで、出来れば自分が皆さんを紹介とかはしたくないので何か一言でも書いてもらえればありがたいです</p>
+<p>自分のツイートのリプでもいいですし、DMでもいいので書いてくださるとうれしいです。</p>
+<p>よろしくお願いします。m(_ _"m)（ツンツン）</p>
 <h2 id="1kurasu">1クラス</h2>
-<h3>1-1.いーちゃん</h3><img src="i-tyan.png" alt="いーちゃん" width="180" height="180" />
+<h3>1-1.いーちゃん</h3><img src="profile/i-tyan.png" alt="いーちゃん" width="180" height="180" />
 <p></p>
 <a href=https://twitter.com/e_chan1007_u> Twitterプロフィール</a>
 
-<h3>1-2.はるさめ</h3><img src="harusame.jpg" alt="はるさめ" width="180" height="180" />
+<h3>1-2.はるさめ</h3><img src="profile/harusame.jpg" alt="はるさめ" width="180" height="180" />
 <p></p>
 <a href=https://twitter.com/harusamesuko> Twitterプロフィール</a>
 
-<h3>1-3.とら</h3><img src="tora.jpg" alt="とら" width="180" height="180" />
+<h3>1-3.とら</h3><img src="profile/tora.jpg" alt="とら" width="180" height="180" />
 <p></p>
 <a href=https://twitter.com/bmvdsfy> Twitterプロフィール</a>
 
-<h3>1-4.もしやさん</h3><img src="mosiya.jpg" alt="もしやさん" width="180" height="180" />
+<h3>1-4.もしやさん</h3><img src="profile/mosiya.jpg" alt="もしやさん" width="180" height="180" />
 <p></p>
 <a href=https://twitter.com/Moshjyq_san> Twitterプロフィール</a>
 
-<h3>1-5.ゆいっち</h3><img src="yuitti.jpg" alt="ゆいっち" width="180" height="180" />
+<h3>1-5.ゆいっち</h3><img src="profile/yuitti.jpg" alt="ゆいっち" width="180" height="180" />
 <p></p>
 <a href=https://twitter.com/yuiyui_yuitti> Twitterプロフィール</a>
 
-<h3>1-6.つば</h3><img src="tuba.jpg" alt="つば" width="180" height="180" />
+<h3>1-6.つば</h3><img src="profile/tuba.jpg" alt="つば" width="180" height="180" />
 <p></p>
 <a href=https://twitter.com/Tsubaaa1004> Twitterプロフィール</a>
 
-<h3>1-7.こ～ちゃん</h3><img src="ko-tyan.jpg" alt="こ～ちゃん" width="180" height="180" />
+<h3>1-7.こ～ちゃん</h3><img src="profile/ko-tyan.jpg" alt="こ～ちゃん" width="180" height="180" />
 <p></p>
 <a href=https://twitter.com/kocha_uec23> Twitterプロフィール</a>
 
+<h3>1-8.TomaTroll</h3><img src="profile/TomaTroll.jpg" alt="TomaTroll" width="180" height="180" />
+<p></p>
+<a href=https://twitter.com/tomatroll0906> Twitterプロフィール</a>
+
+<h3>1-9.Akito</h3><img src="profile/akito.jpg" alt="Akito" width="180" height="180" />
+<p></p>
+<a href=https://twitter.com/Akito16596989> Twitterプロフィール</a>
+
 <h2 id="2kurasu">2クラス</h2>
-<h3>2-1.かりみど</h3><img src="karimido.jpg" alt="かりみど" width="180" height="180" />
+<h3>2-1.かりみど</h3><img src="profile/karimido.jpg" alt="かりみど" width="180" height="180" />
 <p></p>
 <a href=https://twitter.com/HunshiKyokou> Twitterプロフィール</a>
 
+<h3>2-2.さぶまる</h3><img src="profile/sabumaru.jpg" alt="さぶまる" width="180" height="180" />
+<p></p>
+<a href=https://twitter.com/sabumaru_uec23> Twitterプロフィール</a>
+
+<h3>2-3.あくあ</h3><img src="profile/akua.jpg" alt="あくあ" width="180" height="180" />
+<p></p>
+<a href=https://twitter.com/AquaAkaaka> Twitterプロフィール</a>
+
 <h2 id="3kurasu">3クラス</h2>
-<h3>3-1.み２２</h3><img src="mi22.jpg" alt="み２２" width="180" height="180" />
+<h3>3-1.み２２</h3><img src="profile/mi22.jpg" alt="み２２" width="180" height="180" />
 <p></p>
 <a href=https://twitter.com/mi_nfd22> Twitterプロフィール</a>
 
-<h3>3-2.みとろー</h3><img src="mitoro.jpg" alt="みとろー" width="180" height="180" />
+<h3>3-2.みとろー</h3><img src="profile/mitoro.jpg" alt="みとろー" width="180" height="180" />
 <p></p>
 <a href=https://twitter.com/1110229_uec23> Twitterプロフィール</a>
 
 <h2 id="4kurasu">4クラス</h2>
-<h3>4-1.みみ技術部</h3><img src="mimigijyutu.jpg" alt="" width="180" height="180" />
+<h3>4-1.みみ技術部</h3><img src="profile/mimigijyutu.jpg" alt="" width="180" height="180" />
 <p></p>
 <a href=https://twitter.com/mimi1008_tech> Twitterプロフィール</a>
 
-<h3>4-2.石油王</h3><img src="sekiyuou.jpg" alt="石油王" width="180" height="180" />
+<h3>4-2.石油王</h3><img src="profile/sekiyuou.jpg" alt="石油王" width="180" height="180" />
 <p></p>
 <a href=https://twitter.com/wxrjf> Twitterプロフィール</a>
 
-<h3>4-3.えぐち</h3><img src="eguti.jpg" alt="えぐち" width="180" height="180" />
+<h3>4-3.えぐち</h3><img src="profile/eguti.jpg" alt="えぐち" width="180" height="180" />
 <p></p>
 <a href=https://twitter.com/pro_uecer> Twitterプロフィール</a>
 
-<h3>4-4.メジェド</h3><img src="mejyed.jpg" alt="メジェド" width="180" height="180" />
+<h3>4-4.メジェド</h3><img src="profile/mejyed.jpg" alt="メジェド" width="180" height="180" />
 <p></p>
 <a href=https://twitter.com/mejedolover> Twitterプロフィール</a>
 
-<h3>4-5.Sim</h3><img src="sim.jpg" alt="Sim" width="180" height="180" />
+<h3>4-5.Sim</h3><img src="profile/sim.jpg" alt="Sim" width="180" height="180" />
 <p></p>
 <a href=https://twitter.com/uyDH7pHxfCM1Bdm> Twitterプロフィール</a>
 
+<h3>4-6.おもち</h3><img src="profile/omoti.jpg" alt="おもち" width="180" height="180" />
+<p></p>
+<a href=https://twitter.com/omoti_uec> Twitterプロフィール</a>
+
+<h3>4-7.も(´・ω・｀)ち</h3><img src="profile/motisyobon.jpg" alt="も(´・ω・｀)ち" width="180" height="180" />
+<p></p>
+<a href=https://twitter.com/shobon223> Twitterプロフィール</a>
+
+<h3>4-8.かるぱす</h3><img src="profile/karupasu.jpg" alt="かるぱす" width="180" height="180" />
+<p></p>
+<a href=https://twitter.com/orutoefuyon> Twitterプロフィール</a>
+
 <h2 id="5kurasu">5クラス</h2>
-<h3>5-1.黒焦げたい焼き</h3><img src="taiyaki.jpg" alt="黒焦げたい焼き" width="180" height="180" />
+<h3>5-1.黒焦げたい焼き</h3><img src="profile/taiyaki.jpg" alt="黒焦げたい焼き" width="180" height="180" />
 <p></p>
 <a href=https://twitter.com/keshizumitai> Twitterプロフィール</a>
 
-<h3>5-2.ナツ党</h3><img src="natutou.jpg" alt="ナツ党" width="180" height="180" />
+<h3>5-2.ナツ党</h3><img src="profile/natutou.jpg" alt="ナツ党" width="180" height="180" />
 <p></p>
 <a href=https://twitter.com/nattoisgod1> Twitterプロフィール</a>
 
-<h3>5-3.Simon</h3><img src="simon.jpg" alt="Simon" width="180" height="180" />
+<h3>5-3.Simon</h3><img src="profile/simon.jpg" alt="Simon" width="180" height="180" />
 <p></p>
 <a href=https://twitter.com/Simon08kire> Twitterプロフィール</a>
 
-<h3>5-4.ジャガリア</h3><img src="jyagaria.jpg" alt="ジャガリア" width="180" height="180" />
+<h3>5-4.ジャガリア</h3><img src="profile/jyagaria.jpg" alt="ジャガリア" width="180" height="180" />
 <p></p>
 <a href=https://twitter.com/Jagaaria> Twitterプロフィール</a>
 
-<h3>5-5.87</h3><img src="hana.jpg" alt="87" width="180" height="180" />
+<h3>5-5.87</h3><img src="profile/hana.jpg" alt="87" width="180" height="180" />
 <p></p>
 <a href=https://twitter.com/_hana_ovo_> Twitterプロフィール</a>
 
-<h3>5-6.眠いマン</h3><img src="nemuiman.jpg" alt="眠いマン" width="180" height="180" />
+<h3>5-6.眠いマン</h3><img src="profile/nemuiman.jpg" alt="眠いマン" width="180" height="180" />
 <p></p>
 <a href=https://twitter.com/UEC_cluster2_5> Twitterプロフィール</a>
 
 <h2 id="6kurasu">6クラス</h2>
-<h3>6-1.petora</h3><img src="petora.jpg" alt="petora" width="180" height="180" />
+<h3>6-1.petora</h3><img src="profile/petora.jpg" alt="petora" width="180" height="180" />
 <p></p>
 <a href=https://twitter.com/swish3141> Twitterプロフィール</a>
 
-<h3>6-2.めじぇど</h3><img src="mejed.jpg" alt="めじぇど" width="180" height="180" />
+<h3>6-2.めじぇど</h3><img src="profile/mejed.jpg" alt="めじぇど" width="180" height="180" />
 <p></p>
 <a href=https://twitter.com/Medjed_pastime> Twitterプロフィール</a>
 
-<h3>6-3.174</h3><img src="itinanayon.jpg" alt="174" width="180" height="180" />
+<h3>6-3.174</h3><img src="profile/itinanayon.jpg" alt="174" width="180" height="180" />
 <p></p>
 <a href=https://twitter.com/Uniqueandexciti> Twitterプロフィール</a>
 
-<h3>6-4.ぬるすPOW</h3><img src="nurusu.jpg" alt="ぬるすPOW" width="180" height="180" />
+<h3>6-4.ぬるすPOW</h3><img src="profile/nurusu.jpg" alt="ぬるすPOW" width="180" height="180" />
 <p></p>
 <a href=https://twitter.com/POWPOW_73> Twitterプロフィール</a>
 
+<h3>6-5.ゑぇ*</h3><img src="profile/ee..jpg" alt="ゑぇ*" width="180" height="180" />
+<p></p>
+<a href=https://twitter.com/rou_sei> Twitterプロフィール</a>
+
+<h3>6-6.Kuri-wait(栗松)</h3><img src="profile/kurimatu.jpg" alt="栗松" width="180" height="180" />
+<p></p>
+<a href=https://twitter.com/KuriWait> Twitterプロフィール</a>
+
 <h2 id="7kurasu">7クラス</h2>
-<h3>7-1.toz@wÅ</h3><img src="tozawa.jpg"alt="toz@wÅ" width="180" height="180" />
+<h3>7-1.toz@wÅ</h3><img src="profile/tozawa.jpg"alt="toz@wÅ" width="180" height="180" />
 <p></p>
 <a href=https://twitter.com/t24o00m21> Twitterプロフィール</a>
 
-<h3>7-2.てんたそ</h3><img src="tentaso.jpg" alt="てんたそ" width="180" height="180" />
+<h3>7-2.てんたそ</h3><img src="profile/tentaso.jpg" alt="てんたそ" width="180" height="180" />
 <p></p>
 <a href=https://twitter.com/gttb_tst> Twitterプロフィール</a>
 
+<h3>7-3.おたりょ</h3><img src="profile/otaryo.jpg" alt="おたりょ" width="180" height="180" />
+<p></p>
+<a href=https://twitter.com/otaryo_90> Twitterプロフィール</a>
+
 <h2 id="8kurasu">8クラス</h2>
-<h3>8-1.相馬</h3><img src="souma.jpg" alt="相馬" width="180" height="180" />
+<h3>8-1.相馬</h3><img src="profile/souma.jpg" alt="相馬" width="180" height="180" />
 <p></p>
 <a href=https://twitter.com/abbcmart> Twitterプロフィール</a>
 
-<h3>8-2.ミダ</h3><img src="mida.jpg" alt="ミダ" width="180" height="180" />
+<h3>8-2.ミダ</h3><img src="profile/mida.jpg" alt="ミダ" width="180" height="180" />
 <p></p>
 <a href=https://twitter.com/mida_u> Twitterプロフィール</a>
 
+<h3>8-3.Ocha🍵</h3><img src="profile/ocha.jpg" alt="Ocha🍵" width="180" height="180" />
+<p></p>
+<a href=https://twitter.com/ochauec> Twitterプロフィール</a>
+
+<h3>8-4.サブ要員 ss</h3><img src="profile/sabuyouin.jpg" alt="サブ要員" width="180" height="180" />
+<p></p>
+<a href=https://twitter.com/ssplayerkeyman> Twitterプロフィール</a>
+
 <h2 id="9kurasu">9クラス</h2>
-<h3>9-1.ひろ</h3><img src="hiro.jpg" alt="ひろ" width="180" height="180" />
+<h3>9-1.ひろ</h3><img src="profile/hiro.jpg" alt="ひろ" width="180" height="180" />
 <p></p>
 <a href=https://twitter.com/hiro_uec> Twitterプロフィール</a>
 
-<h3>9-2.🥕</h3><img src="ninjin.png" alt="🥕" width="180" height="180" />
+<h3>9-2.🥕</h3><img src="profile/ninjin.png" alt="🥕" width="180" height="180" />
 <p></p>
 <a href=https://twitter.com/aw_an9> Twitterプロフィール</a>
 
 <h2 id="10kurasu">10クラス</h2>
-<h3>10-1.ツンツン</h3><img src="tunchan.png" alt="ツンツン" width="180" height="180" />
-<p>ツンツンと申します　一応このサイトの制作者です　Ⅲ類10クラス</p>
+<h3>10-1.ツンツン</h3><img src="profile/tunchan.png" alt="ツンツン" width="180" height="180" />
+<p>ツンツンと申します 一応このサイトの制作者です。</p>
 <a href="https://twitter.com/tun___nijyou"> Twitterプロフィール</a>
 
-<h3>10-2.ツイッター</h3><img src="hohuku.jpg" alt="ツイッター" width="180" height="180" />
+<h3>10-2.ツイッター</h3><img src="profile/hohuku.jpg" alt="ツイッター" width="180" height="180" />
 <p></p>
 <a href=https://twitter.com/hofukuzenshinn> Twitterプロフィール</a>
 <a href=https://twitter.com/accelpoke> ポケサー垢</a>
 
-<h3>10-3.なかじ</h3><img src="nakaji.jpg" alt="なかじ" width="180" height="180" />
+<h3>10-3.なかじ</h3><img src="profile/nakaji.jpg" alt="なかじ" width="180" height="180" />
 <p></p>
 <a href=https://twitter.com/ydnz5PFVkS94987> Twitterプロフィール</a>
 
-<h3>10-4.らて</h3><img src="rate.jpg" alt="らて" width="180" height="180" />
+<h3>10-4.らて</h3><img src="profile/rate.jpg" alt="らて" width="180" height="180" />
 <p></p>
 <a href=https://twitter.com/raratete_uec> Twitterプロフィール</a>
 
+<h3>10-5.空箱</h3><img src="profile/karabako.jpg" alt="空箱" width="180" height="180" />
+<p></p>
+<a href=https://twitter.com/chikusyo_123> Twitterプロフィール</a>
+
+<h3>10-6.アカマル</h3><img src="profile/akamaru.jpg" alt="アカマル" width="180" height="180" />
+<p></p>
+<a href=https://twitter.com/akamaru1134342> Twitterプロフィール</a>
+
+<h3>10-7.(ง ´･ᴗ･`)ว</h3><img src="profile/uei.jpg" alt="(ง ´･ᴗ･`)ว" width="180" height="180" />
+<p></p>
+<a href=https://twitter.com/334_nufMgCl2> Twitterプロフィール</a>
+
 <h2 id="11kurasu">11クラス</h2>
-<h3>11-1.針孔</h3><img src="hari.jpg" alt="針孔" width="180" height="180" />
+<h3>11-1.針孔</h3><img src="profile/hari.jpg" alt="針孔" width="180" height="180" />
 <p></p>
 <a href=https://twitter.com/mi_hari_th> Twitterプロフィール</a>
 
-<h3>11-2.チャッピー</h3><img src="tyappi-.jpg" alt="チャッピー" width="180" height="180" />
+<h3>11-2.チャッピー</h3><img src="profile/tyappi-.jpg" alt="チャッピー" width="180" height="180" />
 <p></p>
 <a href=https://twitter.com/UioejVT2PE33340> Twitterプロフィール</a>
 
-<h3>11-3.Ta</h3><img src="Ta.jpg" alt="Ta" width="180" height="180" />
+<h3>11-3.Ta</h3><img src="profile/Ta.jpg" alt="Ta" width="180" height="180" />
 <p></p>
 <a href=https://twitter.com/TM041003> Twitterプロフィール</a>
 
+<h3>11-4.えぴた</h3><img src="profile/epita.jpg" alt="えぴた" width="180" height="180" />
+<p></p>
+<a href=https://twitter.com/epita__> Twitterプロフィール</a>
+
+<h3>11-5.八束</h3><img src="profile/yatuduka.jpg" alt="八束" width="180" height="180" />
+<p></p>
+<a href=https://twitter.com/Yatsuzuka_uec> Twitterプロフィール</a>
+
+<h3>11-6.じょーの</h3><img src="profile/jono.jpg" alt="じょーの" width="180" height="180" />
+<p></p>
+<a href=https://twitter.com/Jono_main> Twitterプロフィール</a>
+
 <h2 id="12kurasu">12クラス</h2>
-<h3>12-1.モフモフの</h3><img src="mohumohuno.jpg" alt="モフモフの" width="180" height="180" />
+<h3>12-1.モフモフの</h3><img src="profile/mohumohuno.jpg" alt="モフモフの" width="180" height="180" />
 <p></p>
 <a href=https://twitter.com/mofumofu_no> Twitterプロフィール</a>
 
 <p><a href="#itibanue">ページ上に移動する</a></p>
-    
+<p>更新履歴</p>
+<p>2023/4/30 サイト作成</p>   
+<p>2023/5/1 更新履歴、あとがき、メンバー追加</p>
 
+<p>あとがき</p>
+<p>今回HTML,CSSを用いて、サイトを製作した際、とらさん、みみ技術部さん、その他多くの方々に助けていただだいたおかげで何とかサイト運営に持っていけました。
+   この場をお借りして感謝を申し上げます。これからもツンツンを応援していただけると幸いです。(2023/4/30)
+</p>
+<p>サイト内にミスがあれば連絡してください、修正いたします。</p>
 </body>
 </html>
