--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <p>自分のツイートのリプでもいいですし、DMでもいいので書いてくださるとうれしいです。</p>
 <p>よろしくお願いします。m(_ _"m)（ツンツン）</p>
 <h2 id="1kurasu">1クラス</h2>
-<h3>1-1.いーちゃん</h3><img src="profile/i-tyan.png" alt="いーちゃん" width="180" height="180" />
+<h3>1-1.いーちゃん</h3><img src="profile/i-tyan.2.jpg" alt="いーちゃん" width="180" height="180" />
 <p></p>
 <a href=https://twitter.com/e_chan1007_u> Twitterプロフィール</a>
 
@@ -67,7 +67,9 @@
 <a href=https://twitter.com/bmvdsfy> Twitterプロフィール</a>
 
 <h3>1-4.もしやさん</h3><img src="profile/mosiya.jpg" alt="もしやさん" width="180" height="180" />
-<p></p>
+<p>VLL/ICES/サイクリング所属</p>
+   音ゲ、ボカロ、歌い手、Vtuber (にじさんじ)、アニメすべていけます。
+   <p>気軽に絡んでください。</p>
 <a href=https://twitter.com/Moshjyq_san> Twitterプロフィール</a>
 
 <h3>1-5.ゆいっち</h3><img src="profile/yuitti.jpg" alt="ゆいっち" width="180" height="180" />
@@ -90,9 +92,17 @@
 <p></p>
 <a href=https://twitter.com/Akito16596989> Twitterプロフィール</a>
 
+<h3>1-10.Kero</h3><img src="profile/kerokero.jpg" alt="kero" width="180" height="180" />
+<p></p>
+<a href=https://twitter.com/Ke2277> Twitterプロフィール</a>
+
+<h3>1-11.ポトフ</h3><img src="profile/potofu.jpg" alt="" width="180" height="180" />
+<p></p>
+<a href=https://twitter.com/Tifani836pien> Twitterプロフィール</a>
+
 <h2 id="2kurasu">2クラス</h2>
 <h3>2-1.かりみど</h3><img src="profile/karimido.jpg" alt="かりみど" width="180" height="180" />
-<p></p>
+<p>ツイートはかりみどの見解であり、ツイート主とは関係ありません。探さないでください。</p>
 <a href=https://twitter.com/HunshiKyokou> Twitterプロフィール</a>
 
 <h3>2-2.さぶまる</h3><img src="profile/sabumaru.jpg" alt="さぶまる" width="180" height="180" />
@@ -112,6 +122,10 @@
 <p></p>
 <a href=https://twitter.com/1110229_uec23> Twitterプロフィール</a>
 
+<h3>3-3.matu</h3><img src="profile/matu.jpg" alt="matu" width="180" height="180" />
+<p></p>
+<a href=https://twitter.com/PD1CC9321XjqSsn> Twitterプロフィール</a>
+
 <h2 id="4kurasu">4クラス</h2>
 <h3>4-1.みみ技術部</h3><img src="profile/mimigijyutu.jpg" alt="" width="180" height="180" />
 <p></p>
@@ -126,7 +140,11 @@
 <a href=https://twitter.com/pro_uecer> Twitterプロフィール</a>
 
 <h3>4-4.メジェド</h3><img src="profile/mejyed.jpg" alt="メジェド" width="180" height="180" />
-<p></p>
+<p>ただのゲーム好き(ゲーム下手)</p>
+   好きなゲームはdbd、モンスト
+   プログラミング未経験
+   <p>所属サークル・team411・競技麻雀部
+   </p>
 <a href=https://twitter.com/mejedolover> Twitterプロフィール</a>
 
 <h3>4-5.Sim</h3><img src="profile/sim.jpg" alt="Sim" width="180" height="180" />
@@ -138,12 +156,17 @@
 <a href=https://twitter.com/omoti_uec> Twitterプロフィール</a>
 
 <h3>4-7.も(´・ω・｀)ち</h3><img src="profile/motisyobon.jpg" alt="も(´・ω・｀)ち" width="180" height="180" />
-<p></p>
+<p>スポチャン,非電源所属
+   検索タグ:唯我独尊 コバンザメ ぼっち</p>
 <a href=https://twitter.com/shobon223> Twitterプロフィール</a>
 
 <h3>4-8.かるぱす</h3><img src="profile/karupasu.jpg" alt="かるぱす" width="180" height="180" />
 <p></p>
 <a href=https://twitter.com/orutoefuyon> Twitterプロフィール</a>
+
+<h3>4-9.Kanaru</h3><img src="profile/kanaru.jpg" alt="kanaru" width="180" height="180" />
+<p></p>
+<a href=https://twitter.com/Kanaru49570357> Twitterプロフィール</a>
 
 <h2 id="5kurasu">5クラス</h2>
 <h3>5-1.黒焦げたい焼き</h3><img src="profile/taiyaki.jpg" alt="黒焦げたい焼き" width="180" height="180" />
@@ -155,7 +178,9 @@
 <a href=https://twitter.com/nattoisgod1> Twitterプロフィール</a>
 
 <h3>5-3.Simon</h3><img src="profile/simon.jpg" alt="Simon" width="180" height="180" />
-<p></p>
+<p>艦これ タウイタウイ泊地提督
+   ツイ廃リスト作ってる人です
+   </p>
 <a href=https://twitter.com/Simon08kire> Twitterプロフィール</a>
 
 <h3>5-4.ジャガリア</h3><img src="profile/jyagaria.jpg" alt="ジャガリア" width="180" height="180" />
@@ -167,8 +192,16 @@
 <a href=https://twitter.com/_hana_ovo_> Twitterプロフィール</a>
 
 <h3>5-6.眠いマン</h3><img src="profile/nemuiman.jpg" alt="眠いマン" width="180" height="180" />
-<p></p>
+<p>◯調に入ってます</p>
 <a href=https://twitter.com/UEC_cluster2_5> Twitterプロフィール</a>
+
+<h3>5-7.あふぁれ</h3><img src="profile/afare.jpg" alt=" あふぁれ" width="180" height="180" />
+<p></p>
+<a href=https://twitter.com/aware_dentsu> Twitterプロフィール</a>
+
+<h3>5-8.ういんぐ</h3><img src="profile/uinngu.jpg" alt="ういんぐ" width="180" height="180" />
+<p></p>
+<a href=https://twitter.com/723_wing_> Twitterプロフィール</a>
 
 <h2 id="6kurasu">6クラス</h2>
 <h3>6-1.petora</h3><img src="profile/petora.jpg" alt="petora" width="180" height="180" />
@@ -184,16 +217,30 @@
 <a href=https://twitter.com/Uniqueandexciti> Twitterプロフィール</a>
 
 <h3>6-4.ぬるすPOW</h3><img src="profile/nurusu.jpg" alt="ぬるすPOW" width="180" height="180" />
-<p></p>
+<p>ポサ・マス研所属
+   僕と契約して君もアイマスPになってよ。</p>
 <a href=https://twitter.com/POWPOW_73> Twitterプロフィール</a>
 
 <h3>6-5.ゑぇ*</h3><img src="profile/ee..jpg" alt="ゑぇ*" width="180" height="180" />
 <p></p>
 <a href=https://twitter.com/rou_sei> Twitterプロフィール</a>
 
-<h3>6-6.Kuri-wait(栗松)</h3><img src="profile/kurimatu.jpg" alt="栗松" width="180" height="180" />
+<h3>6-6.Kuri-wait(栗松)</h3>
+<p><img src="profile/kuriway.jpg" alt="栗松" width="180" height="180" />
+   <img src="profile/kuriway.jpg" alt="栗松" width="180" height="180" />
+   <img src="profile/kuriway.jpg" alt="栗松" width="180" height="180" /></p>
+<img src="profile/kuriway.jpg" alt="栗松" width="180" height="180" />
+<img src="profile/kurimatu.jpg" alt="栗松" width="180" height="180" />
+<img src="profile/kuriway.jpg" alt="栗松" width="180" height="180" />
+<p><img src="profile/kuriway.jpg" alt="栗松" width="180" height="180" />
+   <img src="profile/kuriway.jpg" alt="栗松" width="180" height="180" />
+   <img src="profile/kuriway.jpg" alt="栗松" width="180" height="180" /></p>
 <p></p>
 <a href=https://twitter.com/KuriWait> Twitterプロフィール</a>
+
+<h3>6-7.Mt.Fuji!!</h3><img src="profile/fujisan!!!!.jpg" alt="Mｔ富士" width="180" height="180" />
+<p></p>
+<a href=https://twitter.com/mtfjjj_uec23> Twitterプロフィール</a>
 
 <h2 id="7kurasu">7クラス</h2>
 <h3>7-1.toz@wÅ</h3><img src="profile/tozawa.jpg"alt="toz@wÅ" width="180" height="180" />
@@ -236,11 +283,12 @@
 
 <h2 id="10kurasu">10クラス</h2>
 <h3>10-1.ツンツン</h3><img src="profile/tunchan.png" alt="ツンツン" width="180" height="180" />
+<img src="profile/tuntori.jpg" alt="ツンツン" width="180" height="180" />
 <p>ツンツンと申します 一応このサイトの制作者です。</p>
 <a href="https://twitter.com/tun___nijyou"> Twitterプロフィール</a>
 
 <h3>10-2.ツイッター</h3><img src="profile/hohuku.jpg" alt="ツイッター" width="180" height="180" />
-<p></p>
+<p><img src="profile/自己紹介文AAhohuku.png" alt="ツイッター"width="12%" height="5%"/></p>
 <a href=https://twitter.com/hofukuzenshinn> Twitterプロフィール</a>
 <a href=https://twitter.com/accelpoke> ポケサー垢</a>
 
@@ -264,6 +312,10 @@
 <p></p>
 <a href=https://twitter.com/334_nufMgCl2> Twitterプロフィール</a>
 
+<h3>10-8.きつね</h3><img src="profile/kitune.jpg" alt="きつね" width="180" height="180" />
+<p></p>
+<a href=https://twitter.com/iori297075812> Twitterプロフィール</a>
+
 <h2 id="11kurasu">11クラス</h2>
 <h3>11-1.針孔</h3><img src="profile/hari.jpg" alt="針孔" width="180" height="180" />
 <p></p>
@@ -286,18 +338,21 @@
 <a href=https://twitter.com/Yatsuzuka_uec> Twitterプロフィール</a>
 
 <h3>11-6.じょーの</h3><img src="profile/jono.jpg" alt="じょーの" width="180" height="180" />
-<p></p>
+<p>気軽に絡んでくれると嬉しいです。</p>
 <a href=https://twitter.com/Jono_main> Twitterプロフィール</a>
 
 <h2 id="12kurasu">12クラス</h2>
 <h3>12-1.モフモフの</h3><img src="profile/mohumohuno.jpg" alt="モフモフの" width="180" height="180" />
-<p></p>
+<p>"12クラでただ1人のツイ廃"</p>
+   ポケモンとボカロ好きの自称絵描きです。
+   <p>話しかけてくれると私が喜びます。</p>
 <a href=https://twitter.com/mofumofu_no> Twitterプロフィール</a>
 
 <p><a href="#itibanue">ページ上に移動する</a></p>
 <p>更新履歴</p>
 <p>2023/4/30 サイト作成</p>   
 <p>2023/5/1 更新履歴、あとがき、メンバー追加</p>
+<p>2023/5/15 メンバー追加、一言などを追加いたしました</p>
 
 <p>あとがき</p>
 <p>今回HTML,CSSを用いて、サイトを製作した際、とらさん、みみ技術部さん、その他多くの方々に助けていただだいたおかげで何とかサイト運営に持っていけました。
